adding error responses (pending swagger integration)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/appointments_db
-spring.datasource.username=password
-spring.datasource.password=password
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 
