finishing doctor assignment alg, adding some tables and imp swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=DEBUG
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
