--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ logging.level.org.springframework.security=DEBUG
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
