--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,14 @@ springdoc.swagger-ui.enabled=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+# Configuración de Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=appointmentsmeditec@gmail.com
+spring.mail.password=kuyw hmfo rsny zyvb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
