--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=backend
+server.port=8080
+server.address=0.0.0.0
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/appointments_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/appointments_db?autoReconnect=true
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,11 +15,11 @@ logging.level.org.springframework.security=DEBUG
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/api-docs
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-# Configuración de Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=appointmentsmeditec@gmail.com
