adding connection string

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=backend
 server.port=8080
 server.address=0.0.0.0
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/appointments_db?autoReconnect=true
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=postgresql://appointments_db_g911_user:hnhsFJTiej2WNbdLlfHnTKiBfkbZbSan@dpg-d0ilqm24d50c73do1fhg-a.oregon-postgres.render.com/appointments_db_g911
+spring.datasource.username=appointments_db_g911_user
+spring.datasource.password=hnhsFJTiej2WNbdLlfHnTKiBfkbZbSan
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
