adding jdbc string

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=backend
 server.port=8080
 server.address=0.0.0.0
 
-spring.datasource.url=postgresql://appointments_db_g911_user:hnhsFJTiej2WNbdLlfHnTKiBfkbZbSan@dpg-d0ilqm24d50c73do1fhg-a.oregon-postgres.render.com/appointments_db_g911
+spring.datasource.url=jdbc:postgresql://appointments_db_g911_user:hnhsFJTiej2WNbdLlfHnTKiBfkbZbSan@dpg-d0ilqm24d50c73do1fhg-a.oregon-postgres.render.com/appointments_db_g911
 spring.datasource.username=appointments_db_g911_user
 spring.datasource.password=hnhsFJTiej2WNbdLlfHnTKiBfkbZbSan
 spring.datasource.driver-class-name=org.postgresql.Driver
