adding jdbc string 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,20 @@ spring.application.name=backend
 server.port=8080
 server.address=0.0.0.0
 
-spring.datasource.url=jdbc:postgresql://appointments_db_g911_user:hnhsFJTiej2WNbdLlfHnTKiBfkbZbSan@dpg-d0ilqm24d50c73do1fhg-a.oregon-postgres.render.com/appointments_db_g911
+# URL CORRECTA (sin credenciales dentro)
+spring.datasource.url=jdbc:postgresql://dpg-d0ilqm24d50c73do1fhg-a.oregon-postgres.render.com:5432/appointments_db_g911
+
+# Credenciales separadas
 spring.datasource.username=appointments_db_g911_user
 spring.datasource.password=hnhsFJTiej2WNbdLlfHnTKiBfkbZbSan
+
+# Configuración adicional recomendada
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.database=postgresql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.springframework.security=DEBUG
 
