--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>	
 				<configuration>
+					<encoding>UTF-8</encoding>
 					<source>17</source>
 					<target>17</target>
 					<annotationProcessorPaths>
